# youtube-smart-pause

./: .env  .gitignore  README.md  filter.py  get_stills.py  get_transcript.py  index.html  main.py  pyproject.toml  test-perplexity.html
browser_extention/: config.js  content.js  manifest.json  sidebar.css
